--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
-cite {
-  color: #252525;
-}
-
 body {
-  max-width: 20em;
   margin: 1em;
-  font: 1.8rem/1.4 Georgia, serif;
+  font: 1.2rem/1.4 Georgia, serif;
+}
+.quote {
+  margin: 0;
+  background: #eee;
+  padding: 1em;
+  border-radius: 1em;
+}
+.quote figcaption,
+.quote blockquote {
+  margin: 1em;
 }
