--- a/style.css
+++ b/style.css
@@ -1,15 +1,9 @@
-blockquote::before {
-  content: open-quote;
-}
-blockquote::after {
-  content: close-quote;
-}
-blockquote {
-  quotes: '“' '”' '‘' '’';
-}
-
 body {
   max-width: 20em;
   margin: 1em;
-  font: 1.8rem/1.4 Georgia, serif;
+  font: 1.4rem/1.4 Georgia, serif;
+}
+
+.british q {
+  quotes: '“' '”' '‘' '’' '“' '”' '‘' '’' '“' '”';
 }
